# versaoteste

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Disclaimer.md  Dockerfile  GITHUB_SETUP.md  IntructionsCEO_paperclip.md  LICENSE  MANUAL.md  PesquisAI.ipynb  PesquisAI_Colab.ipynb  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.4.2.2.md  RELEASE_NOTES_v0.4.2.3.md  RELEASE_NOTES_v0.4.2.4.html  RELEASE_NOTES_v0.4.2.4.md  RELEASE_SUMMARY.md  SECURITY.md  SUMARIO_SES_1067.md  SUMARIO_SES_10a4_PLUS.md  __version__.py  citacao_pesquisai.md  constants.py  declaracao_uso_ia.md  disclaimer_pesquisai.md  html_template.py  i18n.py  jokes.py  launch_app.py  launch_app_responsive_v041.py  main.py  opencode_utils.py  progress_bar.py  pyproject.toml  run_fast.py  security.py  setup_dependencies.py  setup_drive.py  (+3 more)
agents/: AGENTS.en.md  AGENTS.es.md  AGENTS.fr.md  AGENTS.pt.md  README.md
docs/: CHANGELOG.md  ENTREGAS_JUNHO_2026.md  INTEGRITY.md  OBSIDIAN_INTEGRATION.md  OBSIDIAN_MEMORY_MODEL.md  OBSIDIAN_WORKFLOW.md  gerar_changelog_pdf.py  gerar_pdf.py
grant_finder/: budget.py  proposal.py
grant_finder/data/: __init__.py  capes.json
grant_finder/sources/: capes.py  fapemig.py
grant_finder/templates/: __init__.py
grant_finder/tests/: __init__.py  test_matcher.py
i18n/: __init__.py  detector.py  translator.py
i18n/tests/: test_translator.py
i18n/translations/: en_US.json  es_ES.json  fr_FR.json  pt_BR.json
pesquisai/: LAUNCH_APP_EDIT_LOG.md  RELEASE_NOTES_v0.5.1.4.md  __init__.py  __version__.py  config.py  constants.py  dependencies.py  index.html  jokes.py  launch_app.py  launch_app_responsive.py  launch_app_responsive_v041.py  opencode_utils.py  progress.py  run.py  run_fast.py  setup.py  skills.py  theme.py  ttyd_index.html
pesquisai/launch/: __init__.py  server.py
pesquisai/launch/static/: app.js  style.css
pesquisai/launch/templates/: index.html.tmpl
pesquisai/obsidian/: autopilot.py  builtin_templates.py  discovery.py  models.py  sync.py  vault.py
pesquisai/obsidian/obsidian/: __init__.py  autopilot.py  discovery.py  links.py  memory.py  search.py
pesquisai/utils/: __init__.py  opencode.py  security.py  subprocess.py
relatorios/: ANALISE_CODIGO.md  IMPLEMENTACAO_RELATORIO.md
releases/v0.4.0/: RELEASE_SUMMARY.md  __version__.py  conftest.py
releases/v0.4.0/agents/: AGENTS.en.md  AGENTS.es.md  AGENTS.fr.md  AGENTS.pt.md
releases/v0.4.0/docs/: ENTREGAS_JUNHO_2026.md  MOBILE_RESPONSIVE_PATCH.md  PATCH_v0.4.1.md
releases/v0.4.0/grant_finder/: README.md  SKILL.md  __init__.py  matcher.py
releases/v0.4.0/grant_finder/data/: cnpq.json  fapemig.json  fapesp.json  nih.json
releases/v0.4.0/grant_finder/sources/: __init__.py  cnpq.py  fapesp.py  finep.py  international.py
releases/v0.4.0/grant_finder/tests/: test_budget.py  test_proposal.py
releases/v0.4.0/i18n/: README.md
releases/v0.4.0/i18n/tests/: __init__.py
releases/v0.4.0/i18n/translations/: __init__.py  en_US.json  es_ES.json  fr_FR.json
releases/v0.4.0/pesquisai/: launch_app_responsive_v041.py
scripts/: init_vault.sh  install.sh  install_plugin.sh  sync_drive_to_obsidian.sh
templates/: launch_button.html  ready_badge.html  wrapper.html
tests/: __init__.py  conftest.py  test_basic.py  test_constants.py  test_jokes.py  test_launch_app.py  test_opencode_utils.py  test_progress_bar.py  test_run_fast.py  test_security.py  test_server.py  test_subprocess.py  test_version_sync.py
