[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pesquisai-additions"
version = "0.4.0"
description = "Adições do PesquisAI v0.4.0 — skill grant_finder, módulo i18n (4 idiomas), patch responsivo mobile"
authors = [
    { name = "Gustavo Bastos Braga", email = "gustavo.braga@ufv.br" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "pesquisai",
    "scientific-research",
    "grant-finder",
    "i18n",
    "mobile-responsive",
    "abnt",
    "ibge",
    "datasus",
    "cnpq",
    "fapemig",
    "ufv",
    "brazilian-research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Internationalization",
]
dependencies = [
    # Herdadas do PesquisAI principal
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "cryptography>=41.0",
    # Módulo i18n
    # (nenhuma dependência extra — usa apenas stdlib)
    # Skill grant_finder
    "requests>=2.31",     # para conectores HTTP
    "beautifulsoup4>=4.12",  # para parsing de HTML
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "requests-mock>=1.11",
]
i18n = [
    # Módulo i18n usa apenas stdlib
]
full = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pdfkit>=1.0.0",  # opcional: para gerar PDFs
]

[project.urls]
Repository = "https://github.com/gustavobraga-byte/PesquisAI"
Documentation = "https://github.com/gustavobraga-byte/PesquisAI/blob/main/MANUAL.md"
Changelog = "https://github.com/gustavobraga-byte/PesquisAI/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/gustavobraga-byte/PesquisAI/issues"
"PesquisAI Main" = "https://github.com/gustavobraga-byte/PesquisAI"

# ── Hatchling build ────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["grant_finder", "i18n", "pesquisai"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "pesquisai_additions/agents"
"docs" = "pesquisai_additions/docs"

# ── Ruff (linter e formatter) ──────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM", "B", "A", "C4", "PT"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PT004", "PT011"]
"data/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Mypy (type checker) ────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_configs = true

# ── Pytest ─────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["grant_finder/tests", "i18n/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=grant_finder --cov=i18n --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
