[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pesquisai-additions"
version = "0.4.1"
description = "PesquisAI v0.4.1 — UI Fixes (Responsive + Theme + Language) + grant_finder + i18n (4 idiomas)"
authors = [
    { name = "Gustavo Bastos Braga", email = "gustavo.braga@ufv.br" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "pesquisai",
    "scientific-research",
    "grant-finder",
    "i18n",
    "mobile-responsive",
    "theme-toggle",
    "abnt",
    "ibge",
    "datasus",
    "cnpq",
    "fapemig",
    "ufv",
    "brazilian-research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Internationalization",
]
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "cryptography>=41.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "requests-mock>=1.11",
]

[project.urls]
Homepage = "https://github.com/gustavobraga-byte/PesquisAI"
Documentation = "https://github.com/gustavobraga-byte/PesquisAI/blob/main/docs/"
Repository = "https://github.com/gustavobraga-byte/PesquisAI"
Issues = "https://github.com/gustavobraga-byte/PesquisAI/issues"
Changelog = "https://github.com/gustavobraga-byte/PesquisAI/blob/main/docs/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "docs",
    "grant_finder",
    "i18n",
    "pesquisai",
    "skills",
]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "README.md"
"LICENSE" = "LICENSE"
"CHANGELOG.md" = "CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["grant_finder/tests", "i18n/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=grant_finder",
    "--cov=i18n",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["grant_finder", "i18n"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
show_missing = true
precision = 2
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["**/node_modules/**", "sandbox/**"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
