[project]
name = "pesquisai"
version = "0.6.0"
description = "PesquisAI v0.6.0 — Modo WEBCLI (opencode web, sem ttyd)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Gustavo Bastos Braga", email = "gustavo.braga@ufv.br" },
]
keywords = [
    "ai", "research", "academic", "brazil", "ibge", "datasus",
    "opencode", "webcli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []
[project.optional-dependencies]
colab = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
dev = [
    "pytest>=8.2.0",
]
[project.scripts]
pesquisai = "main:main"
[project.urls]
Homepage = "https://github.com/gustavobraga-byte/PesquisAI"
Repository = "https://github.com/gustavobraga-byte/PesquisAI"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["pesquisai"]
include = ["AGENTS.md"]
[tool.pytest.ini_options]
testpaths = ["tests"]
